@@ -9,7 +9,6 @@ version_regexp = ^v(.+)$
 tag_format = v%v
 
 [Prereqs] ; Note that we use [LatestPrereqs]!
-Dist::Zilla::Plugin::ApacheTest             = 0
 Dist::Zilla::Plugin::CheckChangesTests      = 0
 Dist::Zilla::Plugin::CompileTests           = 0
 Dist::Zilla::Plugin::ConsistentVersionTest  = 0
@@ -25,7 +24,7 @@ Dist::Zilla::Plugin::MinimumVersionTests    = 0
 Dist::Zilla::Plugin::NoTabsTests            = 0
 Dist::Zilla::Plugin::PodCoverageTests       = 0
 Pod::Coverage::TrustPod                     = 0
-Dist::Zilla::Plugin::PodSpellingTests       = 0
+Dist::Zilla::Plugin::PodLinkTests           = 0
 Dist::Zilla::Plugin::PodSyntaxTests         = 0
 Dist::Zilla::Plugin::PortabilityTests       = 0
 Dist::Zilla::Plugin::ProgCriticTests        = 0
